manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtproxy-healthcheck
spec:
  selector:
    matchLabels:
      app: mtproxy-healthcheck
  template:
    metadata:
      labels:
        app: mtproxy-healthcheck
    spec:
      containers:
        - name: mtproxy-healthcheck
          image: ghcr.io/durachyo/mtproxy-healthcheck
          resources:
            limits:
              memory: '128Mi'
              cpu: '50m'
            requests:
              memory: '96Mi'
              cpu: '20m'
          ports:
            - containerPort: 8000
