manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mtproxy-healthcheck
spec:
  selector:
    app: mtproxy-healthcheck
  ports:
    - name: web
      port: 80
      targetPort: 8000
