manifests/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mtproxy-healthcheck
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`mtproxy.lab.local`)
      priority: 10
      services:
        - name: mtproxy-healthcheck
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mtproxy-healthcheck-redirect
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`mtproxy.lab.local`)
      middlewares:
        - name: redirect-to-https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
